feat: update transfer service codebase
